[tool.poetry]
name = "tech-survs-docker-hub-api"
version = "1.0.0"
description = ""
authors = ["RFull Development"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
microsoft-kiota-abstractions = "^1.3.3"
microsoft-kiota-http = "^1.3.2"
microsoft-kiota-serialization-json = "^1.2.0"
microsoft-kiota-serialization-text = "^1.0.0"
microsoft-kiota-serialization-form = "^0.1.0"
microsoft-kiota-serialization-multipart = "^0.1.0"
urllib3 = "^2.2.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
flake8 = "^7.1.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
