[tool.poetry]
name = "tech-survs-docker-hub-api"
version = "1.0.0"
description = ""
authors = ["RFull Development"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
urllib3 = "^2.3.0"
microsoft-kiota-bundle = "^1.6.7"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
flake8 = "^7.1.1"
pytest = "^8.3.4"
isort = "^5.13.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
